--- a/src/app/features/article/article-list/article-list.css
+++ b/src/app/features/article/article-list/article-list.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  height: 100%;
 }
 
 .list-item {
@@ -10,9 +11,10 @@
   gap: 4rem;
   height: 11rem;
   padding-top: 2rem;
+  border-top: 2px solid var(--border);
 
-  &:not(:first-child) {
-    border-top: 2px solid var(--border);
+  &:first-child {
+    border-top-color: transparent;
   }
 }
 
