--- a/src/app/features/article/article-list/article-list.css
+++ b/src/app/features/article/article-list/article-list.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  height: 100%;
 }
 
 .list-item {
@@ -15,6 +14,10 @@
 
   &:first-child {
     border-top-color: transparent;
+  }
+
+  &:last-child {
+    margin-bottom: 2rem;
   }
 }
 
