Added modal guards

--- a/src/app/features/article/article-card/article-card.css
+++ b/src/app/features/article/article-card/article-card.css
@@ -71,7 +71,7 @@
     stroke: var(--text-color);
   }
 
-  a {
+  span {
     font-weight: 600;
     text-decoration: underline;
     text-decoration-color: var(--search-bar-text);
