--- a/src/app/features/header/menu-dropdown/menu-dropdown.css
+++ b/src/app/features/header/menu-dropdown/menu-dropdown.css
@@ -11,9 +11,7 @@
 }
 
 ul {
-  padding: 0.5rem;
-  padding-top: 0;
-  padding-left: 11px;
+  padding: 0 11px 0.8rem 11px;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
