--- a/src/app/pages/home/home-hero/home-hero.html
+++ b/src/app/pages/home/home-hero/home-hero.html
@@ -1,8 +1,21 @@
 <section class="hero">
-  <h1>
-    Your dev story, <br />
-    in <span class="special-text">bytes</span>
-  </h1>
+  <div class="typewriter">
+    <h1>
+      <span>{{ displayedLine1 }}</span>
+      @if (currentLine === 1) {
+      <span class="cursor">|</span>
+      }
+    </h1>
+
+    <h1>
+      <span>{{ displayedLine2Part1 }}</span>
+      <span class="special-text">{{ displayedLine2Part2 }}</span>
+      @if (currentLine === 2) {
+      <span class="cursor">|</span>
+      }
+    </h1>
+  </div>
+
   <h5>
     A home for developers to share insights, ideas, and the stories behind the
     code
