--- a/src/app/features/footer/footer.css
+++ b/src/app/features/footer/footer.css
@@ -13,7 +13,12 @@ span {
 }
 
 svg {
+  width: 1rem;
+  height: 1rem;
+  font-family: "Inter", sans-serif;
+
   circle {
+    fill: none;
     stroke: var(--text-color);
   }
 
