--- a/src/app/features/footer/footer.html
+++ b/src/app/features/footer/footer.html
@@ -1,26 +1,9 @@
 <footer>
   <div class="container container-left">
     <div class="copyright-icon">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 100 100"
-        width="15"
-        height="15"
-        stroke="black"
-        fill="none"
-      >
-        <style>
-          @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;family=Space+Grotesk:wght@300..700&amp;display=swap");
-        </style>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
         <circle cx="50" cy="50" r="45" stroke-width="6" />
-        <text
-          x="50"
-          y="70"
-          font-size="57"
-          text-anchor="middle"
-          fill="black"
-          font-family="Inter"
-        >
+        <text x="50" y="70" font-size="57" text-anchor="middle" fill="black">
           C
         </text>
       </svg>
