Remove test files + clean up

--- a/src/app/pages/profile-settings/profile-settings.html
+++ b/src/app/pages/profile-settings/profile-settings.html
@@ -11,7 +11,7 @@
     [isEditing]="isEditing"
     [isLoading]="isSaving"
     (editingChange)="onEditingChange($event)"
-    (submit)="onSubmit($event)"
+    (submit)="onSubmit()"
   ></app-profile-details-form>
   <app-profile-stats
     [email]="email"
