--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -2,4 +2,50 @@
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2.5rem;
+}
+
+h1,
+h5 {
+  text-align: center;
+}
+
+h1 {
+  font-family: "Space Mono", monospace;
+  word-spacing: -1rem;
+  line-height: 1;
+}
+
+h5 {
+  width: 40ch;
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+.cursor {
+  font-family: "Inter", sans-serif;
+  font-weight: 200;
+  font-size: smaller;
+  vertical-align: bottom;
+  margin-left: -8px;
+  animation: blink 1s steps(2, start) infinite;
+}
+
+@keyframes blink {
+  0%,
+  50% {
+    opacity: 1;
+  }
+  51%,
+  100% {
+    opacity: 0;
+  }
 }
